minikube.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: myapp
  namespace: default
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 2
  template:
    metadata:
      name: myapp
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: chydinma/tesla:latest
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: appsvc
  namespace: default
spec:
  selector:
     app: myapp
  ports:
  - targetPort: 8080
    port: 80
  type: LoadBalancer
