ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tesla-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /tesla
        pathType: Prefix
        backend:
          service:
            name: appsvc
            port:
              number: 8080
